# tabledata

./: .coveragerc  .travis.yml  MANIFEST.in  Makefile  README.rst  appveyor.yml  pylama.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  on_push_default_branch.yml  publish.yml  tests.yml
.travis/: run_test.sh
docs/: Makefile  conf.py  index.rst  make.bat  make_readme.py
docs/pages/: installation.rst  links.rst
docs/pages/introduction/: badges.txt  feature.txt  index.rst  installation.rst  summary.txt
docs/pages/reference/: data.rst  error.rst  index.rst
examples/: tabledata.ipynb
requirements/: docs_requirements.txt  requirements.txt  test_requirements.txt
tabledata/: __init__.py  __version__.py  _common.py  _converter.py  _core.py  _logger.py  _sanitizer.py  error.py  normalizer.py
tabledata/_logger/: __init__.py  _logger.py
tabledata/logger/: _logger.py
test/: test_common.py  test_converter.py  test_logger.py  test_normalizer.py  test_sanitizer.py  test_tabledata.py
